fix spacing in navbar and added predicates for tooltiplink

--- a/client/components/NavBar.css
+++ b/client/components/NavBar.css
@@ -3,7 +3,7 @@ a[disabled] {
     pointer-events: none;
 }
 
-div.navbar-item {
+.no-padding {
   padding: 0;
 }
 
